# pdf-summarizer

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  summary.json  summary_json  todo.md
